assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Space+Mono&display=swap');

.text-style {
    font-family: Poppins, sans-serif;
    color: #bbee02;
    font-size: 8vw;
}

.background {
    background-image: url("../images/background.jpg");
    background-position: center;
    background-size: cover; 
}

.custom-layout {
    padding-top: 10%;
}

.hide {
    display: none;
}

.show {
    display: flex;
}

.answer-hide {
    display: none;
}

/*---------------------titles---------------*/

.title {
    font-family: 'Space Mono', sans-serif;
    font-weight: 600;
    display: flex;
    text-align: center;
    color: #bbee02;
    font-size: 8vw;
}

.title-container {
    display: flex;
}

.sub-title {
    font-family: Poppins, sans-serif;
    color: pink;
    font-size: 5vw;
    margin: 0% 5%;
}

.select-text {
    color: aliceblue;
    font-family: Poppins, sans-serif;
    font-size: 5vw;
    padding-top: 15%;
    text-align: center;
}

.select-text-two {
    color: aliceblue;
    font-family: Poppins, sans-serif;
    font-size: 4vw;
    padding-top: 5%;
    text-align: center;
}

/*---------------------question---------------*/

.question-box {
    display: none;
    height: 100%;
    width: 100%;
    border: 3px solid black;
    padding: 0% 0%; 
}

.question {
    width: 100%;
    text-align: center;
    color: #bbee02;
    font-size: 9vw;
}

/*---------answer----------------*/

.answer-box {
    height: 100px;
    width: 300px;
    border: 1px solid black;
}

.tick {
    visibility: none;
    display: none;
}
.correct {
    visibility: visible;
    color: green;
}

.cross {
    visibility: none;
    display: none;
}

.incorrect {
    visibility: visible;
    color: red;
}

.custom-input {
    margin: 0 auto;
    text-align: center;
    background-color: blue;
    color: aliceblue;
    font-size: 4vw;
    font-family: Poppins, sans-serif;
}

.text-score {
    font-family: Poppins, sans-serif;
    color: aliceblue;
    font-size: 6vw;
}

/*-----------------buttons------------------*/

.button-container {
    padding: 5% 0%;
}

.custom-button {
    color: aliceblue;
    font-size: 5vw;
    background-image: linear-gradient(#ff7e14, rgb(88, 50, 0));
    padding: 0% 3%;
}


.button-container-two {
    padding: 5% 5%;
}

.back-btn {
    color: aliceblue;
    font-size: 6vw;
    margin-left: 5%;
    padding-bottom: 5%;
}

/*-----------------timer------------------*/

.timer-container {
    margin-right: 10%;
    padding: 3% 0%;
}

.time-running-out {
    font-family: Poppins, sans-serif;
    color: red;
    font-size: 8vw;
}


/*-----------------slow------------------------*/

.slow-custom {
    margin-left: 5%;
    margin-top: 5%;
}

.text-style-slow {
    font-family: Poppins, sans-serif;
    color: #bbee02;
    font-size: 4vw;
}


/*-----------------Challenge select-------------*/

.gold {
    background-image: linear-gradient(#615700 ,#b6a403);
    width: 100%;
    text-decoration: none!important;
    text-align: center;
    margin-left: 5%;
    border: solid 2px rgb(0, 0, 128);
    -webkit-transition: ease-out 1s;
    -moz-transition: ease-out 1s;
    -o-transition: ease-out 1s;
}

.gold:hover {
    padding-top: 5%;
}

.diamond {
    background-image: url("../images/diamond.jpg");
    width: 100%;
    text-decoration: none!important;
    text-align: center;
    border: solid 2px rgb(0, 0, 128);
    -webkit-transition: ease-out 1s;
    -moz-transition: ease-out 1s;
    -o-transition: ease-out 1s;
}

.diamond:hover {
    padding-top: 5%;
}

.platinum {
    background-image: linear-gradient(#b9b9b9, rgb(0, 0, 0));
    width: 100%;
    text-decoration: none!important;
    text-align: center;
    margin-right: 5%;
    border: solid 2px rgb(0, 0, 128);
    -webkit-transition: ease-out 1s;
    -moz-transition: ease-out 1s;
    -o-transition: ease-out 1s;
}

.platinum:hover {
    padding-top: 5%;
}

.times-table-text {
    font-family: Poppins, sans-serif;
    color: #2502ee;
    font-size: 6vw;
    padding-top: 3%;
}

.challenge-text {
    font-family: Poppins, sans-serif;
    color: #e4e5e6;
    font-size: 5vw;
    padding-top: 3%;
    vertical-align: center;
}


/*-----------------challenges---------------------*/
.challenge-question-box {
    height: 100%;
    width: 100%;
    border: 3px solid black;
    padding: 0% 0%; 
}

.challenge-input {
    display: flex;
    margin: 0 auto;
    text-align: center;
    background-color: blue;
    color: aliceblue;
    font-size: 4vw;
    font-family: Poppins, sans-serif;
}

.trophy-custom {
    display: none;
}

.trophy-win {
    display: inline-block;
    color: hsl(54, 97%, 36%, 0.8);
    font-size: 6vw;
    animation: celebrate 1s infinite;
}

@keyframes celebrate {
  0% {
    transform: translateY(0%);
  }

  50% {
    transform: translateY(80%);
  }

  100% {
    transform: translateY(0%);
  }
}

